--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 
 Abdulmuhaymin Olalekan <abdulmuhayminolalekan@gmail.com>
+Stanley Perpetual C. <dr.stanleyperpetual@gmail.com>
 
